로그인 화면: 사진 크기 문제 해결

--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -41,7 +41,7 @@
                 align-items: center; /* 수직 정렬 */
             }
 
-            .login-screen > div > img {
+            .login-content > img {
                 height: 48px;
                 margin-bottom: 30px;
             }
