--- a/templates/password_edit.html
+++ b/templates/password_edit.html
@@ -37,7 +37,7 @@
                 align-items: center; /* 수직 정렬 */
             }
 
-            .login-screen > div > img {
+            .login-content img {
                 height: 48px;
                 margin-bottom: 30px;
             }
@@ -181,7 +181,7 @@
     <body>
         <div class="login-screen">
             <div class="login-content">
-                <img src="../static/img/edit.png">
+                <img src="../static/edit.png">
                 <div class="login-input">
                     <input type="text" placeholder="수정할 비밀번호를 입력하세요."><br>
                     <input type="password" placeholder="비밀번호를 한번 더 입력하세요.">
