--- a/templates/password_edit.html
+++ b/templates/password_edit.html
@@ -182,11 +182,13 @@
         <div class="login-screen">
             <div class="login-content">
                 <img src="../static/img/edit.png">
+                <form method="post" action="{{ url_for('password') }}">
                 <div class="login-input">
-                    <input type="text" placeholder="수정할 비밀번호를 입력하세요."><br>
-                    <input type="password" placeholder="비밀번호를 한번 더 입력하세요.">
+                    <input type="text" name = "password" placeholder="수정할 비밀번호를 입력하세요."><br>
+                    <input type="password" name = "check" placeholder="비밀번호를 한번 더 입력하세요.">
                 </div>
-                <button class="login-btn">수정하기</button>
+                <button type = "submit"class="login-btn">수정하기</button>
+                </form>
             </div>
         </div>
         <!-- jQuery and Bootstrap Bundle (includes Popper) -->
