--- a/templates/article.html
+++ b/templates/article.html
@@ -1,327 +1,339 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
-
-    <!-- ICON -->
-    <script src="https://kit.fontawesome.com/ed3efe3d23.js" crossorigin="anonymous"></script>
-    <!-- mark.js -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <!-- highlight.js 스타일시트 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
-    <!-- highlight.js 라이브러리 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-    <style>
-        /* 배경색 설정 */
-        html, body {
-            height: 100%;
-            margin: 0;
-            background-color: #EEEBF7;
-        }
-
-        .site-top {
-            display: flex;
-            align-items: center; /* 수직 정렬 */
-            background-color: white;
-            height: 53px;
-            padding-left: 40px;
-        }
-
-        .navbar-item > img {
-            height: 100%;
-        }
-
-        .site-top p img {
-            height: 32px;
-            margin-right: 10px;
-        }
-
-        .site-top > p {
-            color: #111111;
-            font-size: 13.5px;
-            margin-left: auto;
-            margin-right: 20px;
-            display: flex;
-            align-items: center; /* 수직 정렬 */
-        }
-
-        .site-top > p > span {
-            color: #646464;
-            text-decoration: underline;
-            margin-left: 30px;
-        }
-
-        .container {
-            display: flex;
-            align-items: flex-start;
-        }
-
-        .my-page {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start; /* 기본 정렬 왼쪽 */
-            position: relative;
-            width: 286.5px;
-            background-color: white;
-            margin: 40px 0 0 40px;
-            padding: 20px 20px 10px 20px;
-        }
-
-        .my-page > .my-page-text {
-            font-size: 16.5px;
-            color: #111111;
-            padding-top: 0;
-        }
-
-        .my-page hr {
-            display: block;
-            width: 100%;
-            border: 0.5px solid #EEEBF7;
-            margin: 3px 0;
-        }
-
-        .my-page > p {
-            display: flex;
-            justify-content: space-between; /* 양쪽 정렬 */
-            align-items: center; /* 개별 요소 수직 정렬 */
-            font-size: 14px;
-            color: #2b2b2b;
-            padding: 10px 0;
-            margin: 0;
-            width: 100%;
-        }
-
-        .my-page > p span:last-child {
-            margin-left: auto;
-            text-align: right;
-        }
-
-        .my-page > .pw-edit {
-            display: flex;
-            justify-content: flex-end;
-            width: 100%;
-            color: #646464;
-            margin-top: 30px;
-            text-decoration: underline;
-        }
-
-        .content {
-            margin: 35px 40px 0 40px;
-            width: 100%;
-        }
-
-        .content-container {
-            background-color: white;
-            padding: 3% 6%;
-        }
-
-        .content-header {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-
-        .content-header > p {
-            display: inline-block;
-            font-size: 20px;
-            color: #111111;
-            margin: 0;
-        }
-
-        .basic-btn {
-            color: white;
-            border: none;
-            font-size: 16.5px;
-            background-color: #5E2EED;
-            margin-right: 10px;
-            width: 87px;
-            height: 32px;
-        }
-
-        .content-list > div > p {
-            font-size: 15px;
-            color: #2b2b2b;
-        }
-
-        .content-list > div > p span {
-            color: #8B8B8B;
-        }
-
-        .page-list {
-            position: fixed;
-            bottom: 40px;
-            left: 50%; /* 수평 정렬 */
-            transform: translateX(-50%); /* 수평 정렬 */
-        }
-
-        .page-num {
-            font-size: 15px;
-            color: #111111;
-            margin: 0 15px;
-            letter-spacing: 5px;
-        }
-
-        .page-btn {
-            color: #BBBBBB;
-        }
-
-        .content hr {
-            display: block;
-            width: 100%;
-            border: 0.5px solid white;
-            margin: 100px 0 10px 0;
-        }
-
-        .registrate-com {
-            display: flex; 
-            align-items: center; 
-            justify-content: space-between; 
-            width: 100%;
-            margin-bottom: 20px;
-        }
-
-        .registrate-com p {
-            margin: 0; /* 기본 마진 제거 */
-            font-size: 16px;
-            color: #111111;
-        }
-
-        .registrate-btn {
-            margin-right: 38.5%;
-            padding: 5px 15px; /* 버튼 패딩 조정 */
-            font-size: 16.5px;
-            background-color: #5E2EED;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        #wrap {
-            font-size: 20px;
-        }
-
-        .comment-input {
-            display: flex;
-            font-size: 16px;
-            color: #8B8B8B;
-            width: 60%;
-            border: 1px solid #BBBBBB;
-            padding: 13px;
-            margin-bottom: 15px;
-        }
-        .datgul {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-            padding: 10px 0;
-        }
-
-        .datgul p,
-        .datgul .btn {
-            margin: 0;
-            padding: 0;
-            line-height: 1.5;
-        }
-
-        .datgul p {
-            font-size: 15px;
-            color: #2b2b2b;
-        }
-
-        .datgul .btn {
-            border: none;
-            background-color: transparent;
-            font-size: 15px;
-            color: #111111;
-            cursor: pointer;
-        }
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
-    </style>
+        <!-- Optional JavaScript -->
+        <!-- jQuery and Bootstrap Bundle (includes Popper) -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 
-    <script>
-    </script>
-</head>
+        <!-- ICON -->
+        <script src="https://kit.fontawesome.com/ed3efe3d23.js" crossorigin="anonymous"></script>    
+        
+        <style>
+            /* 배경색 설정 */
+            html, body {
+                height: 100%;
+                margin: 0;
+                background-color: #EEEBF7;
+            }
 
-<body>
-    <div class="site-top">
-        <a class="navbar-item" href="{{ url_for('main') }}">
-            <img src="../static/logo.png">
-        </a>
-        <p><a href ="{{ url_for('logout')}}">로그아웃</a></p>
-    </div>
+            .site-top {
+                display: flex;
+                align-items: center; /* 수직 정렬 */
+                background-color: white;
+                height: 53px;
+                padding-left: 40px;
+            }
 
-    <div class="container">
-        <div class="my-page">
-            <p class="my-page-text">마이 페이지</p>
-            <hr>
+            .site-top > img {
+                height: 100%;
+            }
+
+            .site-top p img {
+                height: 32px;
+                margin-right: 10px;
+            }
+
+            .site-top > p {
+                color: #111111;
+                font-size: 13.5px;
+                margin-left: auto;
+                margin-right: 20px;
+                display: flex;
+                align-items: center; /* 수직 정렬 */
+            }
+
+            .site-top > p > span {
+                color: #646464;
+                text-decoration: underline;
+                margin-left: 30px;
+            }
+
+            .container {
+                display: flex;
+                align-items: flex-start;
+            }
+
+            .my-page {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start; /* 기본 정렬 왼쪽 */
+                position: relative;
+                width: 286.5px;
+                background-color: white;
+                margin: 40px 0 0 40px;
+                padding: 20px 20px 10px 20px;
+            }
+
+            .my-page > .my-page-text {
+                font-size: 16.5px;
+                color: #111111;
+                padding-top: 0;
+            }
+
+            .my-page hr {
+                display: block;
+                width: 100%;
+                border: 0.5px solid #EEEBF7;
+                margin: 3px 0;
+            }
+
+            .my-page > p {
+                display: flex;
+                justify-content: space-between; /* 양쪽 정렬 */
+                align-items: center; /* 개별 요소 수직 정렬 */
+                font-size: 14px;
+                color: #2b2b2b;
+                padding: 10px 0;
+                margin: 0;
+                width: 100%;
+            }
+
+            .my-page > p span:last-child {
+                margin-left: auto;
+                text-align: right;
+            }
+
+            .my-page > .pw-edit {
+                display: flex;
+                justify-content: flex-end;
+                width: 100%;
+                color: #646464;
+                margin-top: 30px;
+                text-decoration: underline;
+            }
+
+            .content {
+                margin: 35px 40px 0 40px;
+                width: 100%;
+            }
+
+            .content-container {
+                background-color: white;
+                padding: 3% 6%;
+            }
+
+            .content-header {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 10px;
+            }
+
+            .content-header > p {
+                display: inline-block;
+                font-size: 20px;
+                color: #111111;
+                margin: 0;
+            }
+
+            .basic-btn {
+                color: white;
+                border: none;
+                font-size: 16.5px;
+                background-color: #5E2EED;
+                margin-right: 10px;
+                width: 87px;
+                height: 32px;
+            }
+
+            .content-list > div > p {
+                font-size: 15px;
+                color: #2b2b2b;
+            }
+
+            .content-list > div > p span {
+                color: #8B8B8B;
+            }
+
+            .page-list {
+                position: fixed;
+                bottom: 40px;
+                left: 50%; /* 수평 정렬 */
+                transform: translateX(-50%); /* 수평 정렬 */
+            }
+
+            .page-num {
+                font-size: 15px;
+                color: #111111;
+                margin: 0 15px;
+                letter-spacing: 5px;
+            }
+
+            .page-btn {
+                color: #BBBBBB;
+            }
+
+            .content hr {
+                display: block;
+                width: 100%;
+                border: 0.5px solid white;
+                margin: 100px 0 10px 0;
+            }
+
+            .registrate-com {
+                display: flex; 
+                align-items: center; 
+                justify-content: space-between; 
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            .registrate-com p {
+                margin: 0; /* 기본 마진 제거 */
+                font-size: 16px;
+                color: #111111;
+            }
+
+            .registrate-btn {
+                margin-right: 38.5%;
+                padding: 5px 15px; /* 버튼 패딩 조정 */
+                font-size: 16.5px;
+                background-color: #5E2EED;
+                color: white;
+                border: none;
+                cursor: pointer;
+            }
+
+            #wrap {
+                font-size: 20px;
+            }
+
+            .comment-input {
+                display: flex;
+                font-size: 16px;
+                color: #8B8B8B;
+                width: 60%;
+                border: 1px solid #BBBBBB;
+                padding: 13px;
+                margin-bottom: 15px;
+            }
+            .datgul {
+                display: flex;
+                align-items: center;
+                gap: 30px;
+                padding: 10px 0;
+            }
+
+            .datgul p,
+            .datgul .btn {
+                margin: 0;
+                padding: 0;
+                line-height: 1.5;
+            }
+
+            .datgul p {
+                font-size: 15px;
+                color: #2b2b2b;
+            }
+
+            .datgul .btn {
+                border: none;
+                background-color: transparent;
+                font-size: 15px;
+                color: #111111;
+                cursor: pointer;
+            }
+
+        </style>
+
+        <script>
+        </script>
+    </head>
+    <body>
+        <div class="site-top">
+            <a class="navbar-item" href="{{ url_for('main') }}">
+                <img src="../static/logo.png">
+            </a>
             <p>
-                <span class="label-container">
-                    ▶ <span><a href ="{{ url_for('showmine') }}">작성한 글</a>{{mst}}개</span>
-                </span>
-                
+                <img src="../static/user.png">
+                60번 훈련생
+                <span href ="{{ url_for('logout')}}">로그아웃</span>
             </p>
-            <p>
-                <span class="label-container">
-                    ▶ <span><a href ="{{ url_for('comentmine') }}">작성한 댓글</a>{{rst}}개</span>
-                </span>    
-            </p>
-            <p>
-                <span class="label-container">
-                    ▶ <span>좋아요 누른 글</span>
-                </span>
-            </p>
-            <p class="pw-edit"><a href = "{{ url_for('cpw') }}">비밀번호 수정</a></p>
         </div>
 
-        <div class="content">
-            <div class="content-header">
-                <p>TODAY WE LEARN</p>
-                <div class="button-container">
-                    {% if cont.user == cvc %}
-                    <a href = "{{url_for('want',id = cont['_id'])}}"><button class="write-article basic-btn">수정</button></a>
-                    <a href = "{{url_for('delete',id = cont['_id'])}}"><button class="write-article basic-btn">삭제</button></a>
-                    {% endif %}
-                </div>
+        <div class="container">
+            <div class="my-page">
+                <p class="my-page-text">마이 페이지</p>
+                <hr>
+                <p>
+                    <span class="label-container">
+                        ▶ <span><a href ="{{ url_for('showmine') }}">작성한 글</a>{{mst}}개</span>
+                    </span>
+                    <span>10개</span>
+                </p>
+                <p>
+                    <span class="label-container">
+                        ▶ <span><a href ="{{ url_for('comentmine') }}">작성한 댓글</a>{{rst}}개</span>
+                    </span>
+                    <span>10개</span>
+                </p>
+                <p>
+                    <span class="label-container">
+                        ▶ <span>좋아요 누른 글</span>
+                    </span>
+                    <span>10개</span>
+                </p>
+                <p class="pw-edit"><a href = "{{ url_for('cpw') }}">비밀번호 수정</a></p>
             </div>
-            <div class="content-container">
-                <div class="content-container-title">
-                    <p id="title">{{ cont.title }}</p>
+            
+            <div class="content">
+                <div class="content-header">
+                    <p>TODAY WE LEARN</p>
+                    <div class="button-container">
+                        {% if cont.user == cvc %}
+                        <a href = "{{url_for('want',id = cont['_id'])}}"><button class="write-article basic-btn">수정</button></a>
+                        <a href = "{{url_for('delete',id = cont['_id'])}}"><button class="write-article basic-btn">삭제</button></a>
+                        {% endif %}
+                    </div>
                 </div>
-
-                <div class="content-container-article">
-                    {{cont.content|safe}}
-                </div>
-
                 <div class="content-container">
+                    <div class="content-container-title">
+                        <p id="title">{{ cont.title }}</p>
+                    </div>
+                    <div class="content-container-article">
+                        {{cont.content|safe}}
+                    </div>
+
+                <hr>
+
+                <div class=".content-container-datgul">
                     <form method="POST" action="{{url_for('comment',lid = cont['_id'])}}">
-                    <div class="content-container-header">
-                        <button>등록</button>
-                    </div>
-                    <div style="display:none">
-                        <input name = "lid" value = "{{ cont['_id'] }}"></input>
-                    </div>
-                    <textarea name ="commentx" placeholder="댓글을 작성하세요."></textarea>
+                        <div class="registrate-com">
+                            <p id="wrap">{{datgul_num}}개의 댓글</p>
+                            <button class="registrate-btn basic-btn">등록</button>
+                        </div>
+                        <div style="display:none">
+                            <input name="lid" value="{{ cont['_id'] }}"></input>
+                        </div>
+                        <textarea class="comment-input" name="commentx" placeholder="댓글을 작성하세요."></textarea>
+                        
                     </form>
                     <div class="content-list">
                         {% for com in comm %}
+
+                        <div class="datgul">
                             <p>{{com.content}}</p>
+                            <button type="button" class="btn">x</button>
+                        </div>
+
                         {% endfor %}
-                    </div>
+                    </div>          
                 </div>
-                <hr>
             </div>
+        </div>
+
+        <div class="page-list">
+            <span class="left page-btn">◀</span>
+            <span class="page-num">1 2 3 4 5 6 7 8 9</span>
+            <span class="right page-btn">▶</span>
         </div>
 
         <script>
@@ -329,6 +341,5 @@
             hljs.highlightAll();
         });
         </script>
-</body>
-
+    </body>
 </html>
