--- a/templates/commentmine.html
+++ b/templates/commentmine.html
@@ -172,10 +172,16 @@
     </head>
     <body>
         <div class="site-top">
-            <a class="navbar-item" href="{{ url_for('main') }}">
+            <!-- <a class="navbar-item" href="{{ url_for('main') }}">
                 <h1 class="title is-4">TWL</h1>
-              </a>
-            <p><a href ="{{ url_for('logout')}}">로그아웃</a></p>
+              </a> -->
+            <!-- 수정 사항 : TWL 이미지 클릭시 main 접속-->
+            <a class="TWL " href="{{ url_for('main') }}"></a>
+            <div class="user-info">
+                <img src="../static/user.png" alt="사용자">
+                <span>{{ ID }}번 훈련생</span>
+                <span class="logout">로그아웃</span>
+            </div>
         </div>
 
         <div class="container">
