--- a/templates/writing_page_mix.html
+++ b/templates/writing_page_mix.html
@@ -181,7 +181,7 @@
                 <textarea id="mcontent" name = mcontent></textarea>
                 <textarea id="hcontent" name = "content"></textarea>
             </div>
-            <button type = "submit">출간하기</button>
+            <button onclick="">출간하기</button>
             </form>
         </div>
     </main>
