--- a/templates/change.html
+++ b/templates/change.html
@@ -209,7 +209,7 @@
             <div class="header-buttons">
 <!-- 버튼들 클래스 추가 -->
                 <a href="{{ url_for('main') }}"><button class="basic-btn" style="background-color: gray;">취소</button></a>
-                <button class="basic-btn" type="submit">출간하기</button>
+                <button class="basic-btn" onclick="change()">출간하기</button>
             </div>
         </div>
         <div class="content2">
@@ -303,6 +303,9 @@
             // 내용 실시간 미리보기
             document.getElementById('markdownInput').addEventListener('input', updatePreview);
         });
+        function change(){
+            
+        }
     </script>
 </body>
 
