--- a/templates/writing_page_mix.html
+++ b/templates/writing_page_mix.html
@@ -217,12 +217,12 @@
                 <div id="htmlOutput"></div>
             </div>
             <form method="post" action="{{url_for('listup')}}">
-            <div style="display:none">
-                <input id="titl" name = "title" type="text">
-                <textarea id="mcontent" name = mcontent></textarea>
-                <textarea id="hcontent" name = "content"></textarea>
-            </div>
-            <button type = "submit">출간하기</button>
+                <div style="display:none">
+                    <input id="titl" name="title" type="text">
+                    <textarea id="mcontent" name=mcontent></textarea>
+                    <textarea id="hcontent" name="content"></textarea>
+                </div>
+                <button type="submit" class="basic-btn">출간하기</button>
             </form>
         </div>
     </main>
