--- a/templates/article.html
+++ b/templates/article.html
@@ -16,7 +16,10 @@
 
         <!-- ICON -->
         <script src="https://kit.fontawesome.com/ed3efe3d23.js" crossorigin="anonymous"></script>    
-        
+        <!-- highlight.js 스타일시트 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+    <!-- highlight.js 라이브러리 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
         <style>
             html,
             body {
