--- a/templates/change.html
+++ b/templates/change.html
@@ -303,9 +303,23 @@
             // 내용 실시간 미리보기
             document.getElementById('markdownInput').addEventListener('input', updatePreview);
         });
-        function change(){
-            
-        }
+        function likeMovie(title) {
+                $.ajax({
+                    type: "POST",
+                    url: "/api/like",
+                    data: {'title': title},
+                    success: function (response) {
+                        if (response['result'] == 'success') {
+                            // 2. '좋아요 완료!' 얼럿을 띄웁니다.
+                            alert('좋아요 완료!')
+                            // 3. 변경된 정보를 반영하기 위해 새로고침합니다.
+                            showMovie()
+                        } else {
+                            alert('좋아요 실패ㅠㅠ')
+                        }
+                    }
+                });
+            }
     </script>
 </body>
 
