토글 > 왕관모양으로 수정

--- a/templates/article.html
+++ b/templates/article.html
@@ -294,13 +294,13 @@
                 <hr>
                 <p>
                     <span class="label-container">
-                        ▶ <span><a href ="{{ url_for('showmine') }}">작성한 글</a></span>
+                        🏅 <span><a href ="{{ url_for('showmine') }}">작성한 글</a></span>
                     </span>
                     <span>{{mst}}개</span>
                 </p>
                 <p>
                     <span class="label-container">
-                        ▶ <span><a href ="{{ url_for('comentmine') }}">작성한 댓글</a></span>
+                        🏅 <span><a href ="{{ url_for('comentmine') }}">작성한 댓글</a></span>
                     </span>
                     <span>{{rst}}개</span>
                 </p>
