--- a/templates/change.html
+++ b/templates/change.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<!-- 
-    ---------수정 사항---------
-    1.    /* header 클래스 스타일 추가 */
-    2.    /* TWL 이미지 스타일 추가 */
-    3.    출간하기 버튼 위치 변경(취소랑 같이 묶음.) 
-    4.    /* header-buttons 스타일 추가 */
-    5.    버튼들 클래스 추가 + /* 버튼 스타일 추가 */
-
-    --- 수정 못한거 -----
-    content2 왼쪽 오른쪽 간격 다름.
--->
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            <!-- bootstrap CSS -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- jQuery and Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -43,15 +31,6 @@
             height: 100%;
             margin: 0;
             background-color: #EEEBF7;
-        }
-/* 버튼 스타일 추가 */
-        .basic-btn {
-            color: white;
-            font-size: 16.5px;
-            background-color: #5E2EED;
-            margin-right: 10px;
-            width: 87px;
-            height: 32px;
         }
 
         /* 헤더 스타일 */
@@ -98,7 +77,6 @@
             gap: 3%;
             padding: 0 40px;
             height: calc(100vh - 150px);
-            
         }
 
         /* 작성 영역 */
@@ -177,12 +155,16 @@
             display: flex;
             justify-content: space-between;
         }
-
-        /* header-buttons 스타일 추가 */
-        .header-buttons {
-            margin: 30px 80px 10px 0;
-            /* 상 우 하 좌 */
+        /* 버튼 스타일 추가 */
+        .basic-btn {
+            color: white;
+            font-size: 16.5px;
+            background-color: #5E2EED;
+            margin-right: 10px;
+            width: 87px;
+            height: 32px;
         }
+
     </style>
 </head>
 
@@ -202,14 +184,14 @@
 
     <main>
         <div class="header">
-            <!-- 수정사항 : TIL 클래스 추가 -->
             <p class="TIL">TODAY I LEARN</p>
             <!-- 버튼들을 감싸는 div 추가 -->
 
             <div class="header-buttons">
-<!-- 버튼들 클래스 추가 -->
-                <a href="{{ url_for('main') }}"><button class="basic-btn" style="background-color: gray;">취소</button></a>
-                <button class="basic-btn" onclick="change()">출간하기</button>
+                <!-- 버튼들 클래스 추가 -->
+                <a href="{{ url_for('main') }}"><button class="basic-btn"
+                        style="background-color: gray; margin: 30px 50px 10px 0;">취소</button></a>
+                <!-- <a href = "{{ url_for('main') }}"><button>취소</button></a> -->
             </div>
         </div>
         <div class="content2">
@@ -236,12 +218,11 @@
             </div>
             <form method="post" action="{{url_for('change',id = origin._id)}}">
                 <div style="display:none">
-                    <input id="titl" name="title" type="text" value="{{origin.title}}">
-                    <textarea id="mcontent" name=mcontent>{{origin.md}}</textarea>
-                    <textarea id="hcontent" name="content">{{origin.content}}</textarea>
+                    <input id="titl" name = "title" type="text" value="{{origin.title}}">
+                    <textarea id="mcontent" name = mcontent>{{origin.md}}</textarea>
+                    <textarea id="hcontent" name = "content">{{origin.content}}</textarea>
                 </div>
-                <!-- <button type = "submit">출간하기</button> -->
-                <!-- 출간하기 버튼 위치 변경(취소랑 같이 묶음.) -->
+                <button type="submit" class="basic-btn">출간하기</button>
             </form>
         </div>
     </main>
@@ -303,23 +284,6 @@
             // 내용 실시간 미리보기
             document.getElementById('markdownInput').addEventListener('input', updatePreview);
         });
-        function likeMovie(title) {
-                $.ajax({
-                    type: "POST",
-                    url: "/api/like",
-                    data: {'title': title},
-                    success: function (response) {
-                        if (response['result'] == 'success') {
-                            // 2. '좋아요 완료!' 얼럿을 띄웁니다.
-                            alert('좋아요 완료!')
-                            // 3. 변경된 정보를 반영하기 위해 새로고침합니다.
-                            showMovie()
-                        } else {
-                            alert('좋아요 실패ㅠㅠ')
-                        }
-                    }
-                });
-            }
     </script>
 </body>
 
