--- a/templates/commentmine.html
+++ b/templates/commentmine.html
@@ -240,7 +240,7 @@
             <div class="user-info">
                 <img src="../static/user.png" alt="사용자">
                 <span>{{ ID }}번 훈련생</span>
-                <span class="logout">로그아웃</span>
+                <span class="logout"><a href ="{{ url_for('logout')}}">로그아웃</a></span>
             </div>
         </div>
 
