짜잘짜잘한 것들

--- a/templates/article.html
+++ b/templates/article.html
@@ -319,7 +319,7 @@
                 </div>
                 <div class="content-container">
                     <div class="content-container-title">
-                        <p id="title">{{ cont.title }}</p>
+                        <h1 id="title">{{ cont.title }}</h1>
                     </div>
                     <div class="content-container-article">
                         {{cont.content|safe}}
