comment delete update

--- a/templates/article.html
+++ b/templates/article.html
@@ -344,9 +344,9 @@
 
                         <div class="datgul">
                             <p>{{com.content}}</p>
-                            
+                            {% if com.user == cvc %}
                             <a href = "{{url_for('cdelete',id = com['_id'])}}"><button type="button" class="btn">x</button></a>
-
+                            {% endif %}
                         </div>
 
                         {% endfor %}
