--- a/templates/writing_page_mix.html
+++ b/templates/writing_page_mix.html
@@ -99,6 +99,7 @@
         .see-content {
             background-color: white;
             padding: 20px;
+            height: 80%;
         }
         
         .write-content label {
